Spacing, added Hero, fixed hover, added Image

--- a/assets/scss/vars/_spacing.scss
+++ b/assets/scss/vars/_spacing.scss
@@ -1,2 +1,29 @@
 $wrapper-gutter-sm: 20;
 $wrapper-gutter-lg: 100;
+
+$spacers: (
+  0: 0,
+  4: 4,
+  8: 8,
+  16: 16,
+  24: 24,
+  32: 32,
+  40: 40,
+  44: 44,
+  48: 48,
+  56: 56,
+  64: 64,
+  68: 68,
+  70: 70,
+  72: 72,
+  80: 80,
+  88: 88,
+  96: 96,
+  104: 104,
+  112: 112,
+  120: 120,
+  128: 128,
+  144: 144,
+  156: 156,
+  188: 188,
+) !default;
